# panda_mounted_husky_sim

./: .gitignore  README.md  debug_comments.txt  tate (exclude large zip)"
husky_nav2_slam/: CMakeLists.txt  package.xml
husky_nav2_slam/config/: ekf.yaml  mapper_params_online_async.yaml  nav2_params.yaml  slam_params.yaml  slamtoolbox_params_online_async.yaml
husky_nav2_slam/launch/: nav2_slam.launch.py
husky_nav2_slam/map/: map.data
husky_nav2_slam/map/map_house/: map.data
husky_nav2_slam/map/map_v2/: map.data
husky_nav2_slam/map/map_v3/: map_v3.pgm  map_v3.yaml
husky_panda_description/: CMakeLists.txt  package.xml
husky_panda_description/config/: bridge_husky_panda.yaml  controller.yaml  controllers.yaml  initial_joint_positions.yaml  ros2_controllers.yaml
husky_panda_description/husky_panda_model/: husky_panda_rviz.rviz  husky_small_house_world.sdf  husky_warehouse_world.sdf  warehouse.usd
husky_panda_description/husky_panda_model/isaac_files/: model_backup.sdf  model_realsense.sdf
husky_panda_description/husky_panda_model/isaac_files/panda_mount_husky/: panda_mount_husky.usd
husky_panda_description/husky_panda_model/panda_mounted_husky/: model.config  model.sdf  panda_husky_isaac.usd  panda_mount_husky.urdf  panda_mount_husky_isaac.urdf  panda_mounted_husky.urdf.xacro
husky_panda_description/husky_panda_model/panda_mounted_husky/husky_robot_description/: husky.urdf.xacro  model.config  model.sdf
husky_panda_description/husky_panda_model/panda_mounted_husky/panda_model_description/: model.sdf  panda.urdf.xacro  panda_backup.urdf.xacro  panda_realsense.urdf.xacro
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_AirconditionerA_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_Bed_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_Carpet_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_ChairD_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_Chandelier_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_DeskPortraitA_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_DeskPortraitA_02/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_DeskPortraitB_02/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_DeskPortraitC_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_DeskPortraitD_03/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_DeskPortraitD_04/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_Dumbbell_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_FitnessEquipment_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_FloorB_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_FoldingDoor_02/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_HouseWallB_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_KitchenCabinet_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_NightStand_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_Pillow_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_PortraitB_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_PortraitB_02/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_PortraitD_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_PortraitD_02/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_ReadingDesk_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_RoomCeiling_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_RoomWall_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_SeasoningBox_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_SofaB_01/: model.sdf
husky_panda_description/husky_panda_model/small_house/aws_robomaker_residential_Sofa_01/: model.sdf
husky_panda_description/launch/: sim_husky_panda.launch.py
husky_panda_description/rviz/: husky_panda_rviz.rviz
husky_panda_description/scripts/: husky_isaac.py  husky_panda_bridge.py  panda_trajectory_bridge.py  twist_to_stamped.py
husky_panda_description/world/: husky_simple_world.sdf
husky_panda_description/world/bookstore/: husky_bookstore_world.sdf
husky_panda_description/world/small_house/: husky_small_house_world.sdf
husky_panda_description/world/warehouse/: husky_warehouse_world.sdf
husky_panda_description/worlds/: empty.sdf
huskypanda_moveit_config/: CMakeLists.txt  package.xml
huskypanda_moveit_config/config/: controller_setting.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  panda.srdf  panda_mounted_husky.srdf  pilz_cartesian_limits.yaml  sensor_3d.yaml  sensors_3d.yaml  servo.yaml
huskypanda_moveit_config/include/: controller_setting.yaml  moveit_common.yaml  moveit_cpp.yaml  planning_pipelines.yaml
huskypanda_moveit_config/include/moveit_package/: sensors_3d.yaml
huskypanda_moveit_config/launch/: description.launch.py  moveit2_sim.launch.py  moveit2_test.launch.py
huskypanda_moveit_config/scripts/: pick_and_place.py
huskypanda_moveit_config/src/: moveit_process.cpp
huskypanda_moveit_config/srdf/: panda_mounted_husky.srdf.xacro
(+150 files in other folders)
