<?xml version="1.0"?>
<package format="3">
  <name>husky_nav2_slam</name>
  <version>0.1.0</version>
  <description>Bringup for Nav2 + SLAM Toolbox on Husky (GZ sim or hardware).</description>
  <license>Apache-2.0</license>
  <maintainer email="you@example.com">Your Name</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch-time deps -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Core stacks we start -->
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <!-- Common runtime tools -->
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
