<?xml version="1.0"?>
<package format="3">
  <name>husky_panda_description</name>
  <version>0.0.1</version>
  <description>Panda description + sim launch</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>gz_ros2_control_demos</exec_depend>



  <!-- runtime deps -->
  <exec_depend>ros_gz</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- if you use ros2_control in the URDF/launch -->
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <!-- fix a typo if present -->
  <exec_depend>geometry_msgs</exec_depend>

  <!-- MoveIt + servo + actions -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <!-- <std_exec_depend>python3</std_exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>