<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>huskypanda_moveit_config</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="skarthikbe96@gmail.com">rebellion</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>husky_panda_description</exec_depend>


  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>backward_ros</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
